// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProductHeader rendering tests ProductHeader - product type BUNDLE - test 1`] = `
<div>
  <div
    data-testid="product-header"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1"
      >
        <h1
          class="text-3xl font-bold mb-3"
          data-testid="name"
        >
          name 1
        </h1>
        <div
          class="flex items-center gap-3 flex-wrap"
        >
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 bg-green-100 text-green-700 border-green-200"
            data-slot="badge"
            data-testid="badge"
          >
            BUNDLE
          </span>
          <span
            class="text-3xl font-bold text-indigo-600"
            data-testid="price"
          >
            $
            59.99
          </span>
          <span
            class="text-sm text-slate-600 flex items-center gap-1"
            data-testid="quick-stats"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-package h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 21.73a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73z"
              />
              <path
                d="M12 22V12"
              />
              <polyline
                points="3.29 7 12 12 20.71 7"
              />
              <path
                d="m7.5 4.27 9 5.15"
              />
            </svg>
            3 templates included
          </span>
        </div>
      </div>
    </div>
    <p
      class="text-base mt-4 text-slate-700"
      data-testid="description"
    >
      description 1
    </p>
  </div>
</div>
`;

exports[`ProductHeader rendering tests ProductHeader - product type TEMPLATE - test 1`] = `
<div>
  <div
    data-testid="product-header"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1"
      >
        <h1
          class="text-3xl font-bold mb-3"
          data-testid="name"
        >
          name 1
        </h1>
        <div
          class="flex items-center gap-3 flex-wrap"
        >
          <span
            class="inline-flex items-center justify-center rounded-full border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 bg-blue-100 text-blue-700 border-blue-200"
            data-slot="badge"
            data-testid="badge"
          >
            TEMPLATE
          </span>
          <span
            class="text-3xl font-bold text-indigo-600"
            data-testid="price"
          >
            $
            59.99
          </span>
        </div>
      </div>
    </div>
    <p
      class="text-base mt-4 text-slate-700"
      data-testid="description"
    >
      description 1
    </p>
  </div>
</div>
`;
